# Nirvasell

./: .dockerignore  .env.example  .gitignore  AUDIT_LOG.md  BEST_BACKUP_PLAN.md  BEST_FOLDER_REGISTRY.md  BEST_REORGANIZATION_PLAN.md  BEST_RISK_REGISTER.md  BEST_UNKNOWN_FOLDER_REPORT.md  CHANGELOG.md  CLAUDE_PROJECT_REGISTRY.md  CONFLICT_REPORT.md  CONFLICT_UPDATE.md  CONTRIBUTING.md  CURSOR_PROJECT_REGISTRY.md  DECISION_LOG.md  DEPLOY.md  Dockerfile  ECOSYSTEM_MAP.md  FREE_DEPLOY.md  HEART_REPORT.md  HQ_BLUEPRINT.md  KNOWLEDGE_REGISTRY.md  LICENSE  LOCAL_AUDIT_REPORT.md  LOCAL_CONFLICT_REPORT.md  LOCAL_REGISTRY.md  LOCAL_SOURCE_OF_TRUTH.md  MAC_REORGANIZATION_PLAN.md  NIRVACORE_V1_PLAN.md  NIRVA_REGISTRY.md  NIRVA_REPO_AUDIT.md  README.md  REPO_AUDIT_REPORT.md  REPO_REGISTRY.md  SOURCE_OF_TRUTH_REPORT.md  SOURCE_OF_TRUTH_UPDATE.md  _ai_helpers.py  _auth_gate.py  _components.py  (+131 more)
.streamlit/: config.toml  (+1 more)
nirvacore-v1/: .gitignore  README.md  pyproject.toml
nirvacore-v1/.github/workflows/: ci.yml
nirvacore-v1/src/nirvacore/: __init__.py
nirvacore-v1/src/nirvacore/application/: attendance_service.py  clock.py  employee_service.py  payroll_service.py  ports.py  schedule_service.py  site_service.py
nirvacore-v1/src/nirvacore/domain/: attendance.py  employee.py  errors.py  ids.py  money.py  payroll.py  shift.py  site.py  timeutil.py
nirvacore-v1/tests/: conftest.py  test_attendance_service.py  test_domain_attendance.py  test_domain_shift.py  test_money.py  test_payroll_service.py  test_schedule_service.py  test_shift_persistence.py  test_sqlite_repository.py
(+279 files in other folders)
